--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,11 @@ jobs:
       run: npm run build
     - name: Test
       run: npm test
+      "test": "echo \"No tests specified\" && exit 0",
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "test": "echo \"No tests specified\" && exit 0"
+}
