--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,8 @@ jobs:
       run: npm run build
     - name: Test
       run: npm test
-      "test": "echo \"No tests specified\" && exit 0",
+      
+      "test": "echo \"No tests specified\" && exit 0"
 "scripts": {
   "dev": "vite",
   "build": "vite build",
