--- a/package.json
+++ b/package.json
@@ -31,4 +31,11 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "test": "echo \"No tests specified\" && exit 0"
+}
 }
